# pic-search

./: README.md  pyproject.toml
src/pic_search/: __init__.py  cli.py  ocr.py
