[project]
name = "pic-search"
version = "1.0.0"
description = "Search the text of images in your folder."
readme = "README.md"
authors = [
    { name = "Ryan Stolliker" }
]
requires-python = ">=3.11"
dependencies = [
    "pytesseract>=0.3.13",
]
license = { text = "MIT"}

[project.scripts]
pic-search = "pic_search:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
